--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     </div>
     <div class="boxs">
             <div class="box">
-                <h2>Box</h2>
+                <h2>List Of Items</h2>
             </div>
             <div class="box">
-                <h2>Box</h2>
+                <h2>Box1</h2>
             </div>
             <div class="box">
-                <h2>Box</h2>
+                <h2>Box2</h2>
             </div>
             <div class="box">
-                <h2>Box</h2>
+                <h2>Box3</h2>
             </div>
         </div>
 
